Fix layout bug

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -16,7 +16,7 @@ nav {
   @include border-radius(50%);
   border: 2px solid #ffffff;
   display: block;
-  max-width: 30px;
+  width: 30px;
 }
 
 .nav-brand {
